tests/e2e/empty_string.error
Error: syntax error in story at line 1, column 5

1|    a = "{}"
          ^^^^

E0060: String templates can't be empty
